Added Portfolio.get_value
